[package]
name = "anyseq"
version = "0.1.0"
edition = "2021"

authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT"
description = "Automatically generate serde Deserializer from separated values."
homepage = "https://github.com/yamaura/anyseq"
repository = "https://github.com/yamaura/anyseq"
readme = "README.md"
keywords = []
categories = []
include = ["src/**/*.rs", "README.md", "LICENSE"]

[package.metadata.release]
push = false
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "Bump version to {{version}}"
tag-message = "{{tag_name}}"

[package.metadata.docs.rs]
all-features = true

[dependencies]
paste = "1"
serde = "1"
thiserror = "1"
winnow = "0.6.8"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }

[features]
csv = []
spaces = []
